# my-python-ai-kata

./: .gitignore  Dockerfile  README.md  build-mcp-docker-image.sh  compose.yml  noxfile.py  pre-commit.sh  pyproject.toml  pyrightconfig.json  tests.sh
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/copilot/: copilot-instructions.md
.github/workflows/: ci.yaml
config/: config.toml
docker/postgres/: init.sql
docs/: clai.md  instructions.md  mcp.md  running-postgres-in-docker.md  using-strands-agents.md
src/my_python_ai_kata/: __main__.py
src/my_python_ai_kata/agents/: __init__.py  agent.py  app_config.py  model.py  os_projects_naming_agent.py  teachers_assistant.py  teachers_assistant_a2a.py  weather_agent.py
src/my_python_ai_kata/agents/a2a/: README.md  agent_executor.py  client.py  server.py
src/my_python_ai_kata/agents/a2a/helloworld/: __init__.py  client.py  server.py
src/my_python_ai_kata/agents/staff/: README.md  __init__.py  computer_science_assistant.py  english_assistant.py  index.md  language_assistant.py  math_assistant.py  no_expertise.py  research_assistant.py
src/my_python_ai_kata/agents/staff/a2a/: README.md
src/my_python_ai_kata/mcp/: langgraph_query_tool.py  my_hello_client.py  my_hello_server.py  vector_store_helpers.py
tests/: __init__.py  test_main.py  test_model.py
